Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127765

PieSeries is not centered in view

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.0 Beta3, 6.9.0 FF
    • 6.8
    • Graphs: 2D
    • None
    • 6f7af0b0c (dev), bfb60cf81 (6.8)

      PieSeries is not centered in view anymore, possibly due to the QTBUG-127277 change. Visible in testbed and moreso if parented to a small rectangle

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owaisakhtar Owais Akhtar
            owaisakhtar Owais Akhtar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes