Fix PieSeries not centered in view due to axis

Fixes: QTBUG-127765
Pick-to: 6.8
Change-Id: I37cb6835142fd5dc3911c1117e034a85262d1ea4
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>